--- a/La Ñata/Views/Orders/ReportWithoutPrice.cshtml
+++ b/La Ñata/Views/Orders/ReportWithoutPrice.cshtml
@@ -33,13 +33,16 @@
                     </p>
                 </div>
                 <div>
-                    <h3 class="fw-bold">Remito</h3>
-                    <p class="mb-2 text-start">
+                    <p class="fw-bold" style="font-size: 50px; position: absolute">R</p>
+                </div>
+                <div class="d-flex flex-column justify-content-end">
+                    <h3 class="fw-bold text-end">Remito</h3>
+                    <p class="mb-2 text-end">
                         <b>Nº:</b> @Model.id.ToString("D5").PadLeft(6, '0') <br />
                         <b>Fechaº:</b> @DateTime.Now.ToString("dd/MM/yyyy") <br />
                         <b>CUIT:</b> 20-32930332-3 <br />
                     </p>
-                    <p class="mb-0 text-center" style="font-family: 'Roboto', sans-serif; font-style:normal; font-weight: 700">
+                    <p class="mb-0 text-end" style="font-family: 'Roboto', sans-serif; font-style:normal; font-weight: 700">
                         13 de Mayo - Tel: 03404-420949 / 15458425<br />
                         3013 - San Carlos Centro - Santa Fe
                     </p>
