--- a/La Ñata/Views/Orders/ReportWithoutPrice.cshtml
+++ b/La Ñata/Views/Orders/ReportWithoutPrice.cshtml
@@ -10,77 +10,76 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 @try
 {
-    <body class="container mt-5" style="font-family: 'Open Sans', sans-serif;">
-        <div class="container">
+    <body class="container mt-3">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card card-body printableArea">
+                    <div class="d-flex flex-row justify-content-between align-items-start mb-4">
+                        <div>
+                            <img src="~/Content/Images/logo.png" alt="La Ñata" style="max-width: 400px; max-height: 100px;">
+                            <p class="mb-0 fw-bold fst-italic">Alquiler de sillas, mesas,<br />vajillas, mantelería y mobiliario</p>
+                        </div>
+                        <address class="align-self-end mb-0">
+                            <p class="text-muted m-l-5 mb-0">
+                                <b>Cliente:</b> @Model.client_name <br />
+                                <b>Teléfono:</b> @Model.phone<br />
+                                <b>Fecha:</b> @Model.date.ToString("dd/MM/yyyy") <br />
+                                <b>Lugar:</b> @Model.event_adress
+                            </p>
+                        </address>
 
-            @* Header *@
-            <div class="d-flex flex-row justify-content-between mb-3">
-                <div>
-                    <img src="~/Content/Images/logo.png" alt="La Ñata" style="max-width: 400px; max-height: 100px;">
-                    <p class="my-3" style="font-family: 'Roboto', sans-serif; font-style: italic; font-weight: 700">Alquiler de sillas, mesas,<br />vajillas, mantelería y mobiliario</p>
-                    <p class="mb-0" style="font-family: 'Roboto', sans-serif; font-style:normal">
-                        <b>Cliente:</b> @Model.client_name <br />
-                        <b>Teléfono:</b> @Model.phone<br />
-                        <b>Fecha:</b> @Model.date.ToString("dd/MM/yyyy") <br />
-                        <b>Lugar:</b> @Model.event_adress
-                    </p>
-                </div>
-                <div>
-                    <p class="fw-bold" style="font-size: 50px; position: absolute">R</p>
-                </div>
-                <div class="d-flex flex-column justify-content-end">
-                    <h3 class="fw-bold text-end">Remito</h3>
-                    <p class="mb-2 text-end">
-                        <b>Nº:</b> @Model.id.ToString("D5").PadLeft(6, '0') <br />
-                        <b>Fechaº:</b> @DateTime.Now.ToString("dd/MM/yyyy") <br />
-                        <b>CUIT:</b> 20-32930332-3 <br />
-                    </p>
-                    <p class="mb-0 text-end" style="font-family: 'Roboto', sans-serif; font-style:normal; font-weight: 700">
-                        13 de Mayo - Tel: 03404-420949 / 15458425<br />
-                        3013 - San Carlos Centro - Santa Fe
-                    </p>
+                        <address class="align-self-end mb-0">
+                            <p class="text-muted m-l-30 text-end mb-0">
+                                <b>Nº:</b> @Model.id.ToString("D5").PadLeft(6, '0') <br />
+                                <b>Fechaº:</b> @DateTime.Now.ToString("dd/MM/yyyy") <br />
+                                <b>CUIT:</b> 20-32930332-3 <br />
+                                13 de Mayo - Tel: 03404-420949 / 15458425<br />
+                                3013 - San Carlos Centro - Santa Fe
+                            </p>
+                        </address>
+                    </div>
+                    @*<hr class="mb-3">*@
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h3 class="text-start">DETALLE</h3>
+                            <hr class="mb-2 mt-0" />
+                            <div class="table-responsive m-t-40" style="clear: both;">
+                                <table class="table table-hover">
+                                    <thead>
+                                        <tr>
+                                            <th>Producto</th>
+                                            <th class="text-center">Cantidad</th>
+                                        </tr>
+                                    </thead>
+                                        <tbody>
+                                        @foreach (La_Ñata.Models.ProductOrder product in Model.ProductOrder)
+                                        {
+                                            i++;
+                                            <tr style="@(i % 2 == 0 ? "" : "background-color: #f7f7f7")">
+                                                <td>@product.Product.description</td>
+                                                <td class="text-center">@product.quantity</td>
+                                            </tr>
+                                        }
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                        <table class="d-flex mb-3 mt-5 mx-auto justify-content-center" style="border: none">
+                            <tbody style="border: none">
+                                <tr style="border: none">
+                                    <td style="border: none">
+                                        <b class="mt-0 text-center">La Ñata - Todos los derechos reservados &#169</b>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
-
-            @* Detalle *@
-            <h1 class="text-start mt-5">DETALLE</h1>
-            <hr class="mb-3" />
-
-            <table class="table table-light table-striped table-bordered">
-                <thead>
-                    <tr>
-                        <td class="text-center" style="font-weight:600">Producto</td>
-                        <td class="text-center" style="font-weight:600">Cantidad</td>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (La_Ñata.Models.ProductOrder product in Model.ProductOrder)
-                    {
-                        i++;
-                        <tr style="@(i % 2 == 0 ? "" : "background-color: #ecedee")">
-                            <td>@product.Product.description</td>
-                            <td class="text-center">@product.quantity</td>
-                        </tr>
-                    }
-                </tbody>
-            </table>
-
-            <table class="d-flex mb-3 mt-5 mx-auto justify-content-center" style="border: none">
-                <tbody style="border: none">
-                    <tr style="border: none">
-                        <td style="border: none">
-                            <b class="mt-0 text-center">La Ñata - Todos los derechos reservados ©</b>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
         </div>
     </body>
 }
