Add products list

--- a/La Ñata/Views/Products/Index.cshtml
+++ b/La Ñata/Views/Products/Index.cshtml
@@ -39,7 +39,10 @@
                         <i class="bi bi-search" style="color: white"></i>
                     </button>
                 </div>
-                <a id="btnAdd" class="btn text-white me-auto me-md-0 mt-md-0 mt-3" href="../../Products/Create" style="background-color: #e38e00">Agregar</a>
+                <div>
+                    <a target="_blank" class="btn text-white me-auto me-md-0 mt-md-0 mt-3" href="./Products/Print" style="background-color: #324b60">Imprimir listado</a>
+                    <a id="btnAdd" class="btn text-white me-auto me-md-0 mt-md-0 mt-3" href="../../Products/Create" style="background-color: #e38e00">Agregar</a>
+                </div>
             </div>
         </div>
 
